syntax = "proto3";

package event;

option go_package = "github.com/BrosSquad/go-collect/pb;pb";

message ParticipantRequest {
  uint64 user_id = 1;
  uint64 event_id = 2;
  string status = 3;
}
